--- a/SCSS/_generales.scss
+++ b/SCSS/_generales.scss
@@ -11,6 +11,9 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
+  font-family: 'Segoe UI Emoji', 'Noto Color Emoji', 'Apple Color Emoji', 'Segoe UI', 'Helvetica Neue', sans-serif;
+  
+  
 }
 
 main {
@@ -41,4 +44,36 @@ main {
 #cotizacionesBody td {
   padding: 8px;
   background-color:turquoise
+}
+
+@media screen and (max-width: 767px) {
+  body {
+    font-size: 14px; 
+  }
+
+  .logo{
+    max-width: 50px; 
+    height: auto; 
+    
+  }
+
+
+  footer {
+    height: 200px;
+  }
+
+  .footer-container{
+    flex-direction: row;
+    justify-content: space-around; 
+    text-align: center;
+    
+  }
+
+
+  .social-links,
+  .legal-links,
+  .copyright,
+  .support-contact {
+    margin-bottom: 10px;
+  }
 }
